feat: Configure project for PHP backend deployment on cPanel
- Updated vite.config.ts to use PHP backend proxy
- Modified frontend .htaccess for PHP API routing
- Added PHP backend with authentication system
- Updated deployment instructions for PHP hosting
- Configured production build for /admin/ base path
- Added database initialization and test scripts

--- a/server/.env
+++ b/server/.env
@@ -5,7 +5,7 @@ NODE_ENV=development
 # Configuración de la base de datos MySQL
 DB_HOST=50.87.185.24
 DB_USER=ubtrodmy_Admin
-DB_PASSWORD="(?9g&^tP#0Lwf\\!?1RHOPk4cTiX1Ps^KcGV"
+DB_PASSWORD='(?9g&^tP#0Lwf\\!?1RHOPk4cTiX1Ps^KcGV'
 DB_NAME=ubtrodmy_Users
 DB_PORT=3306
 
