feat: Implement real-time counters and UX improvements
- Add real-time polling (30s) for all dashboard counters
- Fix insumos counter to show actual stock instead of record count
- Implement consistent UX/UI improvements across all pages
- Add breadcrumb navigation and redesigned headers
- Create new pages: Insumos, Productos, TiendaDigital
- Add backend routes for insumos, products, and woocommerce
- Fix routing issues in PHP backend
- Improve visual hierarchy with gradient icons and better typography

--- a/php-backend/.env
+++ b/php-backend/.env
@@ -1,7 +1,7 @@
 # Configuración de Base de Datos
 DB_HOST=50.87.185.24
 DB_PORT=3306
-DB_NAME=ubtrodmy_Users
+DB_NAME=ubtrodmy_FungusMy
 DB_USER=ubtrodmy_Admin
 DB_PASSWORD=(?9g&^tP#0Lwf\!?1RHOPk4cTiX1Ps^KcGV
 
